[package]
name = "tls_wrap_common"
version = "0.1.0"
edition = "2021"
authors = ["cuti <cuti0738@gmail.com>"]
description = "Library written in Rust, compatible with boringssl, openssl, and rustls"
license = "MIT"
homepage = "https://github.com/LemangK/tls-wrap"
repository = "https://github.com/LemangK/tls-wrap"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
bytes = "1.3.0"
