[package]
name = "tls_wrap_openssl"
version = "0.1.0"
edition = "2021"
authors = ["cuti <cuti0738@gmail.com>"]
description = "Library written in Rust, compatible with boringssl, openssl, and rustls"
license = "MIT"
#documentation = "https://docs.rs/xxx"
homepage = "https://github.com/LemangK/tls-wrap"
repository = "https://github.com/LemangK/tls-wrap"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
byteorder = "1.4.3"
tokio = { version = "1.22.0", features = ["io-util"] }
tracing = "0.1.37"
cfg-if = "1.0.0"
tls_wrap_common = { path = "../common" }

openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9.80"
openssl-probe = { version = "0.1" }
tokio-openssl = { version = "0.6" }

[dev-dependencies]
hex = "0.4.3"
assert_matches = "1.5.0"