[package]
name = "tls_wrap"
version = "0.1.5"
edition = "2021"
authors = ["cuti <cuti0738@gmail.com>"]
description = "Library written in Rust, compatible with boringssl, openssl, and rustls"
license = "MIT"
#documentation = "https://docs.rs/xxx"
homepage = "https://github.com/LemangK/tls-wrap"
repository = "https://github.com/LemangK/tls-wrap"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
tls_wrap_common = { version = "0.1.0", path = "../common" }

# Boringssl
[target.'cfg(target_os = "ios")'.dependencies]
tls_wrap_boring = { version = "0.1.2", path = "../boring" }

[target.'cfg(target_os = "macos")'.dependencies]
tls_wrap_boring = { version = "0.1.2", path = "../boring" }

[target.'cfg(target_os = "android")'.dependencies]
tls_wrap_boring = { version = "0.1.2", path = "../boring" }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
tls_wrap_boring = { version = "0.1.2", path = "../boring" }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
tls_wrap_boring = { version = "0.1.2", path = "../boring" }

# Rustls
[target.'cfg(all(target_os = "linux", target_arch = "x86"))'.dependencies]
tls_wrap_rustls = { version = "0.1.2", path = "../rustls" }

[target.'cfg(all(target_os = "linux", target_arch = "arm"))'.dependencies]
tls_wrap_rustls = { version = "0.1.2", path = "../rustls" }

[target.'cfg(all(target_os = "windows", target_arch = "aarch64"))'.dependencies]
tls_wrap_rustls = { version = "0.1.2", path = "../rustls" }

[target.'cfg(all(target_os = "windows", target_arch = "x86"))'.dependencies]
tls_wrap_rustls = { version = "0.1.2", path = "../rustls" }

# Openssl
[target.'cfg(all(target_os = "linux", any(target_arch = "mips", target_arch = "mips64")))'.dependencies]
tls_wrap_openssl = { version = "0.1.0", path = "../openssl" }
